Рефакторинг, улучшение авторизации
