# openapi-core3.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "paths": {
-        "/core3/auth/login": {
+        "/sys/auth/login": {
             "post": {
                 "tags": [
                     "Получение данных для выхода"
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/core3/auth/refresh": {
+        "/sys/auth/refresh": {
             "post": {
                 "tags": [
                     "Обновление ключей данных для использования системы"
@@ -114,7 +114,7 @@
                 }
             }
         },
-        "/core3/registration/email": {
+        "/sys/registration/email": {
             "post": {
                 "tags": [
                     "Доступ"
@@ -167,7 +167,7 @@
                 }
             }
         },
-        "/{name}/{section}": {
+        "/{module}/{section}": {
             "get": {
                 "tags": [
                     "Кабинет"
